fixed ribbon alignment

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -20,28 +20,30 @@ p { /*display:inline;*/ }
 }
 
 #toprightbox {
-  width: 50%;
+  width: 600px;
+  text-align: center;
   float:right;
   margin-top: 30px;
 }
-
-#ribbon {
-  width:20px;
-  border: 20px solid;
-  border-color: #00f #00f #00f transparent;
-  margin: 0px auto;
-}
-
 #splashbox {
-  width: 100%;
+  width: 400px;
+  height: 100px;
   padding: 10px;
   /*background-color:rgba(10,50,68,0.8);*/
-  /*background-color:rgba(255,255,255,0.8);*/
+  background-color:rgba(255,255,255,0.8);*/
   background-color: #fff;
   color: #000;
+  float: right;
   /*box-shadow: 0px 0px 10px rgba(0,0,0,0.7);*/
 }
-
+#ribbon {
+  width: 5px;
+  border: 60px solid;
+  float: right;
+  border-color: #fff #fff #fff transparent;
+  opacity: 0.8;
+  margin: 0px auto;
+}
 .bigbutton {
   margin: 20px auto 0px auto;
   padding: 5px;
